# substrate-subxt

./: Cargo.toml
client/: Cargo.toml
proc-macro/: Cargo.toml
src/: error.rs
