[workspace]
members = [".", "client", "proc-macro"]

[package]
name = "substrate-subxt"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["tokio1"]
client = ["substrate-subxt-client"]
# jsonrpsee http client can be configured to use tokio02 or tokio1.
tokio02 = ["jsonrpsee-http-client/tokio02"]
tokio1 = ["jsonrpsee-http-client/tokio1"]

[patch.crates-io]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }

pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.1" }

[dependencies]
async-trait = "0.1.49"
log = "0.4.14"
thiserror = "1.0.24"
futures = "0.3.13"
jsonrpsee-proc-macros = "=0.2.0-alpha.7"
jsonrpsee-ws-client = "=0.2.0-alpha.7"
jsonrpsee-http-client = { version = "=0.2.0-alpha.7", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
codec = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
dyn-clone = "1.0.4"

frame-metadata = "13.0.0"
frame-support = "3.0.0"
sp-runtime = "3.0.0"
sp-version = "3.0.0"
pallet-indices = "3.0.0"
hex = "0.4.3"
sp-std = "3.0.0"
application-crypto = { version = "3.0.0", package = "sp-application-crypto" }
pallet-staking = "3.0.0"

sp-rpc = { version = "3.0.0", package = "sp-rpc" }
sp-core = { version = "3.0.0", package = "sp-core" }
substrate-subxt-client = { version = "0.7.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.15.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
frame-system = "3.0.0"
pallet-balances = "3.0.0"
sp-keyring = "3.0.0"
tempdir = "0.3.7"
wabt = "0.10.0"
which = "4.0.2"
assert_matches = "1.5.0"
